# lndir

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/modules/: CheckCXXStdFilesystemExists.cmake
src/: build_check_std_filesystem.cpp  lndir.cpp
test/: 01_one_dir.test  02_two_dir.test  03_hairy.test  CMakeLists.txt  tests.cpp
